<resources>
  <string name="app_name">Smart DumpsterApp</string>
  <string name="trashType1Text">Rifiuto A</string>
  <string name="trashType2Text">Rifiuto B</string>
  <string name="trashType3Text">Rifiuto C</string>
  <string name="connectButtonText">Connettiti</string>
  <string name="requestTokenText">Richiedi token</string>
  <string name="tokenText">token</string>
  <string name="keepOpenText">Prolunga apertura</string>
  <string name="btStatusText">non connesso</string>
  <string name="requestingStr">Richiesta in corso</string>
  <string name="connectedStr">connesso</string>
  <string name="notConnectedStr">non connesso</string>
  <string name="requestErrorStr">Errore, chiudi l\'app e riprova. Potrebbe esssere necessario aspettare alcuni minuti</string>
  <string name="commServiceError">Impossibile comunicare il server, il deposito sará bloccato. Riprova tra cinque minuti</string>
  <string name="noTokenStr"></string>
  <string name="waitForServerStr">In attesa di comunicazione con il server</string>
  <string name="depositStartedStr">Deposito iniziato</string>
</resources>
