<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.MainActivity">

  <Button
          android:id="@+id/connectButton"
          android:layout_width="105dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="153dp"
          android:layout_marginTop="56dp"
          android:layout_marginEnd="153dp"
          android:text="@string/connectButtonText"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

  <Button
          android:id="@+id/trashType1Button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginTop="348dp"
          android:layout_marginEnd="10dp"
          android:text="@string/trashType1Text"
          app:layout_constraintEnd_toStartOf="@+id/trashType2Button"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

  <Button
          android:id="@+id/keepOpenButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="119dp"
          android:layout_marginTop="62dp"
          android:layout_marginEnd="119dp"
          android:layout_marginBottom="187dp"
          android:text="@string/keepOpenText"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/trashType2Button"
          app:layout_constraintVertical_bias="0.184" />

  <TextView
          android:id="@+id/btStatus"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="176dp"
          android:layout_marginTop="34dp"
          android:layout_marginEnd="176dp"
          android:layout_marginBottom="34dp"
          android:text="@string/btStatusText"
          app:layout_constraintBottom_toTopOf="@+id/askTokenButton"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/connectButton"
          app:layout_constraintVertical_bias="0.0" />

  <Button
          android:id="@+id/trashType3Button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginTop="348dp"
          android:layout_marginEnd="10dp"
          android:text="@string/trashType3Text"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/trashType2Button"
          app:layout_constraintTop_toTopOf="parent" />

  <Button
          android:id="@+id/askTokenButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="141dp"
          android:layout_marginTop="87dp"
          android:layout_marginEnd="141dp"
          android:layout_marginBottom="113dp"
          android:text="@string/requestTokenText"
          app:layout_constraintBottom_toTopOf="@+id/trashType2Button"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/connectButton"
          app:layout_constraintVertical_bias="0.0"
          tools:text="@string/requestTokenText" />

  <TextView
          android:id="@+id/tokenText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="187dp"
          android:layout_marginTop="34dp"
          android:layout_marginEnd="187dp"
          android:layout_marginBottom="59dp"
          android:text="@string/tokenText"
          app:layout_constraintBottom_toTopOf="@+id/trashType2Button"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.49"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/askTokenButton"
          app:layout_constraintVertical_bias="1.0" />

  <Button
          android:id="@+id/trashType2Button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginTop="244dp"
          android:layout_marginEnd="10dp"
          android:text="@string/trashType2Text"
          app:layout_constraintEnd_toStartOf="@+id/trashType3Button"
          app:layout_constraintHorizontal_bias="0.51"
          app:layout_constraintStart_toEndOf="@+id/trashType1Button"
          app:layout_constraintTop_toBottomOf="@+id/connectButton" />

  <TextView
          android:id="@+id/statusText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/keepOpenButton"
          app:layout_constraintVertical_bias="0.457" />

  <TextView
          android:id="@+id/useAlert"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="88dp"
          android:layout_marginTop="146dp"
          android:layout_marginEnd="88dp"
          android:layout_marginBottom="35dp"
          android:text="Non chiudere l'app durante il deposito"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/keepOpenButton"
          app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>